# sanaap-backend-challenge-api

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/: __init__.py
apps/records/: __init__.py  admin.py  apps.py  urls.py
apps/records/api/: urls.py
apps/records/api/serializers/: __init__.py  records_serializers.py
apps/records/api/views/: __init__.py  records_views.py
apps/records/migrations/: 0001_initial.py
apps/records/models/: __init__.py  records_model.py
apps/records/selectors/: __init__.py  records_selector.py
apps/records/services/: __init__.py  records_service.py
apps/records/tests/: test_selectors.py  test_services.py  test_views.py
apps/user/: admin.py  apps.py  signals.py  urls.py
apps/user/api/: urls.py
apps/user/api/serializers/: __init__.py  auth_serializers.py
apps/user/api/views/: __init__.py  auth_views.py
apps/user/migrations/: 0001_initial.py
apps/user/models/: __init__.py  user.py
apps/user/tests/: test_auth_views.py
apps/utils/: __init__.py
apps/utils/filters/: __init__.py  data_record_filter.py
apps/utils/pagination/: __init__.py  base_pagination.py
apps/utils/permissions/: __init__.py  rbac.py
apps/utils/responses/: __init__.py  base_response.py
apps/utils/storage/: __init__.py  minio_storage.py
apps/utils/tests/: test_filters.py  test_permissions.py
dms_system/: asgi.py  settings.py  urls.py  wsgi.py
docs/: api.md  architecture.md
