[tool.poetry]
name = "dms-system"
version = "0.1.0"
description = "Data Management System"
authors = ["Mehdi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.11"
Pillow = "^12.0.0"
celery = "^5.6.0"
redis = "^7.1.0"
django-redis = "^6.0.0"
requests = "^2.32.5"
django-celery-beat = "^2.8.1"
drf-spectacular = "^0.29.0"
django-import-export = "^4.3.14"
django-storages = "^1.14.4"
boto3 = "^1.35.0"
whitenoise = "^6.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"